force-app/main/default/objects/IT_Contact_Detail__c/IT_Contact_Detail__c.object-meta.xml
<CustomObject>
    <label>Contact Detail</label>
    <nameField>
        <label>Contact Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>