force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Account__c.field-meta.xml
<CustomField>
    <fullName>IT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Details</relationshipLabel>
    <relationshipName>Contact_Details</relationshipName>
    <type>Lookup</type>
</CustomField>