force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>IT_Account_Id__c</fullName>
    <formula>IT_Contact__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT_Account_Id</label>
    <type>Text</type>
</CustomField>