force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Address_Progressive__c.field-meta.xml
<CustomField>
    <fullName>IT_Address_Progressive__c</fullName>
    <label>Address Progressive</label>
    <length>11</length>
    <type>Text</type>
</CustomField>