force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Apparatus_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Apparatus_Type__c</fullName>
    <label>Apparatus Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Fax</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Mail</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Mail PEC</label>
            </value>
            <value>
                <fullName>006</fullName>
                <isActive>false</isActive>
                <label>CELLULARE</label>
            </value>
            <value>
                <fullName>004</fullName>
                <isActive>false</isActive>
                <label>LINEA MODEM</label>
            </value>
            <value>
                <fullName>003</fullName>
                <isActive>false</isActive>
                <label>TELEX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>