force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Association_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Association_Type__c</fullName>
    <label>Association Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>