force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Billing_Confirm_Address__c.field-meta.xml
<CustomField>
    <fullName>IT_Billing_Confirm_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Confirm Address</label>
    <type>Checkbox</type>
</CustomField>