force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_CDC_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_CDC_Code__c</fullName>
    <label>CDC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>