force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Contact__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Details</relationshipLabel>
    <relationshipName>Contact_Details</relationshipName>
    <type>Lookup</type>
</CustomField>