force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Contact_Detail_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact_Detail_Type__c</fullName>
    <formula>IT_Contact__r.IT_Contact_Type__c + &quot; &quot; +

CASE(IT_Apparatus_Type__c,
&quot;001&quot;, &quot;Telefono&quot;,
&quot;002&quot;, &quot;Fax&quot;,
&quot;005&quot;, &quot;Mail&quot;,
&quot;007&quot;, &quot;Mail PEC&quot;,

&quot;&quot;)

+ &quot; &quot; + Name</formula>
    <label>Contact Detail Type</label>
    <type>Text</type>
</CustomField>