force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Contact_progressive__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact_progressive__c</fullName>
    <label>Contact progressive</label>
    <length>11</length>
    <type>Text</type>
</CustomField>