force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Credentials__c.field-meta.xml
<CustomField>
    <fullName>IT_Credentials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credentials</label>
    <type>Checkbox</type>
</CustomField>