force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Delivery_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Delivery_Code__c</fullName>
    <label>Delivery Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>