force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Delivery_Site__c.field-meta.xml
<CustomField>
    <fullName>IT_Delivery_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Site</label>
    <referenceTo>ER_Delivery_Site__c</referenceTo>
    <relationshipLabel>Contact Details</relationshipLabel>
    <relationshipName>Contact_Details</relationshipName>
    <type>Lookup</type>
</CustomField>