force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Detail_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Detail_Code__c</fullName>
    <externalId>true</externalId>
    <label>IT_Detail_Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>