force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Distribution_Point__c.field-meta.xml
<CustomField>
    <fullName>IT_Distribution_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Point</label>
    <referenceTo>ER_Distribution_Point__c</referenceTo>
    <relationshipLabel>Contact Details</relationshipLabel>
    <relationshipName>Contact_Details</relationshipName>
    <type>Lookup</type>
</CustomField>