force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Future_Change_Contact_Detail__c.field-meta.xml
<CustomField>
    <fullName>IT_Future_Change_Contact_Detail__c</fullName>
    <label>Future Change Contact Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>