force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Name_and_Detail__c.field-meta.xml
<CustomField>
    <fullName>IT_Name_and_Detail__c</fullName>
    <formula>Name &amp; &quot; (&quot; &amp;  IT_Contact__r.FirstName &amp; &quot; &quot;  &amp;  IT_Contact__r.LastName &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Name and Detail</label>
    <type>Text</type>
</CustomField>