force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Order_Configuration__c.field-meta.xml
<CustomField>
    <fullName>IT_Order_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Configuration</label>
    <type>Checkbox</type>
</CustomField>