force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Orders__c.field-meta.xml
<CustomField>
    <fullName>IT_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orders</label>
    <type>Checkbox</type>
</CustomField>