force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Payroll__c.field-meta.xml
<CustomField>
    <fullName>IT_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll</label>
    <type>Checkbox</type>
</CustomField>