force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Plan__c.field-meta.xml
<CustomField>
    <fullName>IT_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>IT_Plan__c</referenceTo>
    <relationshipLabel>Recapiti del Piano</relationshipLabel>
    <relationshipName>Recapiti_Referenti</relationshipName>
    <type>Lookup</type>
</CustomField>