force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Residue__c.field-meta.xml
<CustomField>
    <fullName>IT_Residue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residue</label>
    <type>Checkbox</type>
</CustomField>