force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Salesforce_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Salesforce_Type__c</fullName>
    <formula>IF(ISPICKVAL(IT_Apparatus_Type__c, &quot;002&quot;), &#39;Fax&#39;,  IF(ISPICKVAL(IT_Apparatus_Type__c, &quot;005&quot;), &#39;Mail&#39;,  IF(ISPICKVAL(IT_Apparatus_Type__c, &quot;007&quot;), &#39;Mail PEC&#39;,  IF(ISPICKVAL(IT_Apparatus_Type__c, &quot;001&quot;)&amp;&amp; BEGINS( IT_Contact_Info__c , &#39;3&#39;) , &#39;Mobile&#39;, &#39;Phone&#39;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Type</label>
    <type>Text</type>
</CustomField>