force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Sending_Invoices__c.field-meta.xml
<CustomField>
    <fullName>IT_Sending_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sending Invoices</label>
    <type>Checkbox</type>
</CustomField>