force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Shipping_Payment__c.field-meta.xml
<CustomField>
    <fullName>IT_Shipping_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Payment</label>
    <type>Checkbox</type>
</CustomField>