force-app/main/default/objects/IT_Contact_Detail__c/fields/IT_Sut__c.field-meta.xml
<CustomField>
    <fullName>IT_Sut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SUT</label>
    <type>Checkbox</type>
</CustomField>