force-app/main/default/objects/IT_Contact_Detail__c/validationRules/VRIT01_Apparatus_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT01_Apparatus_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED( IT_Apparatus_Type__c ),
				$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;)
)</errorConditionFormula>
    <errorMessage>Impossible to modify Type field!</errorMessage>
</ValidationRule>