force-app/main/default/objects/IT_Contact_Detail__c/validationRules/VRIT02_Contact_Detail_Special_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Contact_Detail_Special_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
OR( CONTAINS( Name,&quot;&amp;&quot;), 
 CONTAINS( Name,&quot;@@&quot;),
 CONTAINS( Name,&quot;&gt;&quot;),
 CONTAINS( Name,&quot;&lt;&quot;)
))</errorConditionFormula>
    <errorMessage>Impossible to insert special characters: &amp;,@@,&gt;,&lt;</errorMessage>
</ValidationRule>