force-app/main/default/objects/IT_Contact_Detail__c/validationRules/VRIT04_Contact_Detail_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT04_Contact_Detail_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(	
$User.ER_BypassVR__c = False,
ISPICKVAL(	$User.ER_Business_Unit__c , &#39;IT&#39;),
 				 ISPICKVAL( IT_Apparatus_Type__c,&#39;001&#39;),
				NOT( REGEX(Name, &quot;[\\s0-9]+&quot;)) 
				
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>&#39;Contact Deatail Name&#39; field must be a number if &#39;Apparatus Type&#39; field is Phone</errorMessage>
</ValidationRule>