force-app/main/default/objects/IT_Contact_Detail__c/validationRules/VRIT05_SOC_Contact_Detail_Not_Main.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT05_SOC_Contact_Detail_Not_Main</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
$Profile.Name != &#39;IT System Integration&#39;,
 ISPICKVAL(IT_Contact__r.IT_Type__c , &#39;Soc&#39;),
 IT_Main_Contact__c = true
)</errorConditionFormula>
    <errorMessage>Contact detail of contact type &#39;Soc&#39; cannot be main!</errorMessage>
</ValidationRule>