force-app/main/default/objects/IT_Contact_Detail__c/validationRules/VRIT06_Mail_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT06_Mail_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL( $User.ER_Business_Unit__c , &#39;IT&#39;),
ISPICKVAL( IT_Apparatus_Type__c,&#39;005&#39;),
NOT( REGEX(IT_Contact_Info__c, &quot;[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}&quot;))

)</errorConditionFormula>
    <errorMessage>If Apparatus type is &quot;Mail&quot;, you must enter a valid mail address.</errorMessage>
</ValidationRule>