force-app/main/default/objects/IT_Contact_Detail__c/validationRules/VRIT07_Fax_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT07_Fax_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL( $User.ER_Business_Unit__c , &#39;IT&#39;),
ISPICKVAL( IT_Apparatus_Type__c,&#39;002&#39;),
LEN(IT_Contact_Info__c) &gt; 16  

)</errorConditionFormula>
    <errorMessage>Fax cannot be longer than 16 characters.</errorMessage>
</ValidationRule>