force-app/main/default/objects/IT_Contact_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IT_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IT_Contact__c</field>
        <operation>equals</operation>
    </filters>
    <label>Tutto</label>
</ListView>